# simplified_data_structures

./: CMakeLists.txt  Deque.h  IntDeque.h  IntQueue.h  IntStack.h  Queue.h  SortedBinTree.h  SortedIntBinTree.h  Stack.h  Tree.h  jstyle_asserts.h  main.cpp  readme.md  unittests.cpp
docs/: IntStack.md  Stack.md
